--- a/styles.css
+++ b/styles.css
@@ -44,3 +44,35 @@ body{
     border-collapse: collapse;
     padding: 10px;
 }
+
+.target-main{
+    text-align: start;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
+    width: 30%;
+    padding: 10px;
+}
+
+.target-main img{
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+
+}
+.maintarget{
+    display: flex;
+    gap: 15px;
+    margin: 20px 0;
+}
+
+.botonH{
+    background-color: #0d6efd;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    font-size: 15px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
